app/assets/stylesheets/pages/_user-show.scss
body {
  margin-top: 70px;
}

.user-details {
  margin: 30px 10%;
  margin-top: 120px;
}

.user-info, .plots-list, .tabcontent {
  background: white;
  border-radius: 4px;
}

.user-info {
  padding: 30px 20px;
  margin-bottom: 20px;
  margin-top: 30px;
  p {
    margin-top: 20px;
  }
}

.show-header {
  display:flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0px;
  a {
    margin-right: 20px;
  }
  h4 {
    margin-left: 20px;
  }
}

ul {
  list-style: none;
  margin: 0px;
  padding-left: 0px;
  font-size: 13px;
  color: black;
}

#plots-list {
  background-color: white;
  margin-bottom: 30px;
  a:hover {
    text-decoration: none;
  }
}

.no-plot {
  padding: 40px 20px 50px;
  text-align: center;
  font-size: 18px;
}


@media (max-width: 992px) {
  .user-info {
    display: flex;
    justify-content: space-between;
    align-items: vertical;
    p {
      order: -1;
    }
  }
}

@media (max-width: 786px) {
  .user-picture {
    height: 50px;
    width: 50px;
  }
  .plots-header {
    display: flex;
  }
}
///////////////////////////////////BOOKING/////////////////////////////////////////

.bookings-header {
  border-bottom: 1px solid #EFEFEF;
  display:flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0px;
  a {
    margin-right: 20px;
  }
  h4 {
    margin-left: 20px;
  }
}

#bookings-list {
  background-color: white;
  margin-bottom: 30px;
  ul {
    list-style: none;
    margin: 0px;
    padding-left: 0px;
    font-size: 13px;
    color: black;
  }
  a:hover {
    text-decoration: none;
  }
}





/////////////////////////////////TABS//////////////////////////////////////////////

/* Style the tab content */
.tabcontent {
  padding: 6px 12px;
  border-top: none;
}

.tabs {
  margin-bottom: 2px;
  .tab:first-child {
    border-top-left-radius: 4px;
  }
  .tab:last-child {
    border-top-right-radius: 4px;
    border-right: 0px;
  }
}

a.tab {
  background: white;
  text-decoration: none;
  padding: 5px 10px;
  font-height: 10px;
  margin-right: -5px;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
}
a.tab:hover {
  opacity: 0.8;
}

.tab.active {
  background: #618F3A;
  color: black;
  text-decoration: none;
  color: white;
  border-right: 0px;
  border-bottom: 1px solid #618F3A;
}

.tab:hover {
    opacity: 0.8;
  }

